--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,3 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+form.signup,
+form.login {
+  margin-top: 50px;
+}
+.hidden {
+  display: none
+}
