--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,11 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-form.signup,
+
+form.signup{
+  background-color: aqua;
+}
+
 form.login {
   margin-top: 50px;
 }
