updating with db branch

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,10 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
-form.signup,
+form.signup {
+  margin-top: 50px;
+}
+
 form.login {
   margin-top: 50px;
 }
