updating index.js in client

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,9 +4,9 @@ body {
   font-family: sans-serif;
 }
 
-form.signup{
+/* form.signup{
   background-color: aqua;
-}
+} */
 
 form.login {
   margin-top: 50px;
