--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -10,6 +10,8 @@
 .navbar {
     background-color: transparent;
     height: 5rem;
+    font-family: 'Open Sans', sans-serif;
+
 }
 
 @-webkit-keyframes navbarslide {
