--- a/client/src/components/User/AboutUser/drag.css
+++ b/client/src/components/User/AboutUser/drag.css
@@ -4,7 +4,7 @@
     text-align: center;
     width: 50vw;
     height: 50vh;
-    display: flex;
+    /* display: flex; */
     justify-content: center;
     align-items: center;
   }
