--- a/client/src/components/Event/UserWeek/UserWeek.css
+++ b/client/src/components/Event/UserWeek/UserWeek.css
@@ -3,5 +3,6 @@
     box-shadow: 0 3px 6px rgb(209, 176, 238), 0 3px 6px rgb(209, 176, 238);
     width: 30rem;
     height: 23rem;
+    padding-top: 1rem;
 
 }
