--- a/client/src/components/SuggestedFriends/SuggestedFriends.css
+++ b/client/src/components/SuggestedFriends/SuggestedFriends.css
@@ -2,7 +2,9 @@
 #suggestedFriends {
     background-color: white;
     box-shadow: 0 3px 6px rgb(175, 217, 235), 0 3px 6px rgb(175, 217, 235);
-    width: 25rem;
+    width: 50rem;
     height: 8rem;
+    margin: 0 auto;
 
 }
+
