updating with heathers branch

--- a/client/src/components/Event/ApiCalendar/ApiCalendar.css
+++ b/client/src/components/Event/ApiCalendar/ApiCalendar.css
@@ -23,7 +23,7 @@
   }
 
   div .rbc-event #notSelected {
-    background-color: cadetblue;
+    background-color: grey;
   }
 
   div .rbc-event #selected {
