--- a/client/src/components/Event/ApiCalendar/ApiCalendar.css
+++ b/client/src/components/Event/ApiCalendar/ApiCalendar.css
@@ -22,6 +22,15 @@
     font-size: large;
   }
 
+  #padding {
+    padding: 2px 5px;
+    font-size: 1rem;
+  }
+
+  div .rbc-event {
+    padding: 0;
+  }
+
   div .rbc-event #notSelected {
     background-color: grey;
   }
