added some cards to display user events on home page

--- a/client/src/components/Event/UserWeek/UserWeek.css
+++ b/client/src/components/Event/UserWeek/UserWeek.css
@@ -6,3 +6,11 @@
     padding-top: 1rem;
 
 }
+
+#UserWeekDayCard {
+    box-shadow: none;
+}
+
+#TodayDisplay {
+    background-color: rgb(235, 235, 235);
+}
