updating with heathers branch

--- a/client/src/Pages/Home/Home.css
+++ b/client/src/Pages/Home/Home.css
@@ -1,3 +1,4 @@
+
 #welcome-sign {
     text-align: left;
 }
@@ -9,4 +10,13 @@ h3 {
 .mob-section {
     border: black 5px;
     
+}
+
+#muster-section {
+    margin: 0 auto;
+    
+}
+
+div.modal-content {
+    justify-content: center;
 }
