--- a/client/src/components/MusterMob/MusterMob.css
+++ b/client/src/components/MusterMob/MusterMob.css
@@ -1,5 +1,5 @@
 #saved-mob {
     background-color: white;
     box-shadow: 0 3px 6px rgb(241, 229, 180), 0 3px 6px rgb(241, 229, 180);
-
+    border-color: white;
 }
