--- a/client/src/components/SuggestedFriends/SuggestedFriends.css
+++ b/client/src/components/SuggestedFriends/SuggestedFriends.css
@@ -3,8 +3,8 @@
     background-color: white;
     box-shadow: 0 3px 6px rgb(175, 217, 235), 0 3px 6px rgb(175, 217, 235);
     width: 50rem;
-    height: 8rem;
-    margin: 0 auto;
+    height: 10rem;
+    margin-top: 10px;
 
 }
 
