mob display switching based on day or event selection

--- a/client/src/components/MusterMob/MusterMob.css
+++ b/client/src/components/MusterMob/MusterMob.css
@@ -3,3 +3,23 @@
     box-shadow: 0 3px 6px rgb(241, 229, 180), 0 3px 6px rgb(241, 229, 180);
     border-color: white;
 }
+
+#event-title {
+    font-size: 20px;
+    font-style: bold;
+    text-align: center;
+}
+
+#event-date {
+    text-align: center;
+}
+
+#event-url {
+    text-align: center;
+}
+
+.card {
+    background-color: white;
+    width: 18rem;
+    
+}
