--- a/client/src/components/MusterMob/MusterMob.css
+++ b/client/src/components/MusterMob/MusterMob.css
@@ -4,10 +4,27 @@
     border-color: white;
 }
 
-#event-title {
+#event-title  {
     font-size: 20px;
     font-style: bold;
     text-align: center;
+    background-image:
+    radial-gradient(
+      white,
+      rgb(248, 236, 232)
+    );
+}
+
+#event-day-title {
+    font-size: 20px;
+    font-style: bold;
+    text-align: center;
+    background-image:
+    radial-gradient(
+      white,
+      rgb(248, 236, 232)
+    );
+
 }
 
 #event-date {
