--- a/client/src/components/User/SignupForm/SignupForm.css
+++ b/client/src/components/User/SignupForm/SignupForm.css
@@ -24,6 +24,10 @@ select:-webkit-autofill:focus {
     border-color: lightgray;
   }
 
+#submit-button {
+    margin: 0 auto;
+  }
+
 
 
 #checkbox:valid {
@@ -55,6 +59,44 @@ select:-webkit-autofill:focus {
 h2 {
     text-align: center;
 }
+
+/* #neon {
+    margin: 0;
+    padding: 0 20px;
+    font-size: 3.5em;
+    color: #fff;
+    text-shadow: 0 0 20px #ff005b;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    width: 100%;
+}
+
+#neon::after {
+    content: "One Last Thing";
+    top: 0;
+    left: 0;
+    padding: 0 20px;
+    z-index: -1;
+    color: #ff005b;
+    position: absolute;
+    filter: blur(15px);
+    width: 100%;
+}
+
+#neon::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fe3a80;
+    z-index: -2;
+    filter: blur(40px);
+    opacity: .5;
+
+} */
 
 
 
