--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -8,7 +8,7 @@
 }
 
 .navbar {
-    background-color: transparent;
+    background-color: whitesmoke;
     height: 5rem;
     font-family: 'Open Sans', sans-serif;
 
